tests/fail/BitwiseOrError.java
package fail;

public class BitwiseOrError {
    public static void main(String[] args) {
        System.out.println("a" | 42);
    }
}